# hackertrap

./: .gitignore  LICENSE  README.md  TESTING.md  config.example.yaml  pyproject.toml
deploy/: fix-web-ui.sh  install.sh  smoke-test.sh  sync-repo.sh  update-web.sh  update.sh
deploy/avahi/: hackertrap.service
deploy/iptables/: setup.sh
deploy/systemd/: hackertrap.service
src/hackertrap/: __init__.py  alerts.py  config.py  db.py  detector.py  events.py  honeypot.py  main.py  personas.py  system_ops.py
src/hackertrap/web/: app.py  auth.py
src/hackertrap/web/static/: style.css
src/hackertrap/web/templates/: base.html  dashboard.html  login.html  settings.html  setup.html
tests/: test_auth.py  test_config.py  test_detector.py  test_ntfy.py  test_personas.py  test_system_ops.py
